# opengl-starter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bn  bootstrap.sh  br  imgui.ini  r  rn  t
.github/: copilot-instructions.md
assets/shaders/: debug.fs  multiple_lights.fs  multiple_lights.vs  point.fs  point.vs
src/: hemesh.h  light.h  main.cpp  mesh.h  procmesh.h  shader.h  test.cpp
